# legalops-br

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GUIA-TIA.md  INSTALL-TIA.md  LICENSE  QUICKSTART-TIA.md  README.md  RULES.md  RUNBOOK.md  SECURITY.md  SHADOW-RUN.md  audit.db  legalops.toml.example  pyproject.toml  setup.ps1  setup.sh
.claude/: RULES.md  memory-manifest.json  settings.json
.claude-plugin/: plugin.json
agents/: contrato-analista.md  prazo-extractor-haiku.md  process-monitor.md
docs/: ARCHITECTURE.md  AVISO-E-RISCOS.md  CODE_REVIEW.md  PII_GAPS.md  cli-bridges-v0.3.md
hooks/: hooks.json  morning-briefing.sh  prazo-alerta.sh
maffini-dashboard/: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  INSTALL.md  README.md  maffini.config.json  package.json
memory/: Hindsight.md  MEMORY.md  Primer.md  firm_context.md  practice_lgpd.md  user_tia_may.md
metrics/: benchmark_20260528.json  metrics_20260522.json  metrics_20260528.json  parsers_20260529.json  per_tribunal_20260529.json  pipeline_validation_20260522.json  pipeline_validation_20260523.json  pipeline_validation_20260528.json
scripts/: harness_smoke.sh  measure_per_tribunal.py  measure_redactor.py  validate_pipeline.py
skills/: bancario-contrato.md  briefing.md  contrato.md  dpa-review.md  dsar.md  honorarios.md  intimacao.md  lgpd-implementacao.md  lgpd-triagem.md  onboarding.md  painel.md  prazo.md  processo.md  revisao-semanal.md  saude-privacidade.md  varrer.md
slide/: legalops_pptx.js  package.json
tests/: conftest.py  test_anpd_playbook.py  test_approval_gate.py  test_bacen_cvm_feeds.py  test_br_validators.py  test_cli.py  test_cli_bridges.py  test_cli_health.py  test_cli_helpers.py  test_config.py  test_contract_analyzer.py  test_cpc_prazos.py  test_data_room.py  test_disclosure.py  test_doc_extractor.py  test_doc_templates.py  test_dpa_templates.py  test_dsar.py  test_due_diligence.py  test_edge_cases.py  test_egress.py  test_email_notifier.py  test_eml_reader.py  test_lgpd_specifics.py  test_m365_ingest.py  test_maffini_practice_profile.py  test_metrics.py  test_notification_multiplex.py  test_oab_sigilo.py  test_obs.py  test_orchestrator.py  (+18 more)
(+148 files in other folders)
