[project]
name = "legalops-br"
version = "0.1.0"
description = "LegalOps BR — extensões brasileiras sobre Claude for Legal (PII redaction, CPC prazos, TJPR parser)"
authors = [{name = "Enzo Bossmann", email = "enzombromanus@gmail.com"}]
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
readme = "README.md"

dependencies = [
    "pydantic>=2.0",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "faker>=25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/legalops"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "S"]
ignore = ["S101"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/legalops --cov-report=term-missing"
